Init travis & jacoco

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ after_success:
 notifications:
   email:
     recipients:
-      -rail.evg_study@list.ru
+      evg_study@list.ru
     on_success: never # default: change
     on_failure: always # default: always
