--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-anguage: java
+language: java
 
 jdk:
   - openjdk15
@@ -17,6 +17,6 @@ after_success:
 notifications:
   email:
     recipients:
-      evg_study@list.ru
+      -rail.evg_study@list.ru
     on_success: never # default: change
     on_failure: always # default: always
