--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,11 @@ notifications:
       -rail.evg_study@list.ru
     on_success: never # default: change
     on_failure: always # default: always
+
+    # Start PostgreSQL
+    services:
+      - postgresql
+
+    # Create a database
+    before_script:
+      - psql -c 'create database travis_ci_test;' -U postgres
